# 2026-rebuilt

./: .gitignore  CLAUDE.md  README.md  SHOOTING_SYSTEM_GUIDE.md  constants.py  justfile  pyproject.toml  robot.py  robotcontainer.py  telemetry.py  tuner-project.json
.wpilib/: wpilib_preferences.json
commands/: auto_home.py  auto_tune_hood.py  auto_tune_intake.py  auto_tune_kicker.py  auto_tune_shooter.py  calibrate_ff.py  climb_commands.py  home_hood.py  home_intake.py  hub_shot.py  safe_retract_intake.py  shoot_at_hub.py  shoot_commands.py  tune_shot.py
common/: limelight.py  limelight_helpers.py
deploy/pathplanner/: settings.json
deploy/pathplanner/autos/: Auto Test.auto  shoot depot climb.auto  shoot depot shoot climb.auto  shoot feed climb.auto  shoot feed shoot climb.auto  shoot intake shoot (trench + start down finish up).auto  shoot intake shoot climb (bas).auto  shoot intake shoot climb (down).auto  shoot intake shoot climb (start down bump finish up trench).auto  shoot intake shoot climb (start down finish up).auto  shoot intake shoot climb (start down trench finish up bump).auto  shoot intake shoot climb (start up bump finish down trench).auto  test shoot.auto  (+7 more)
documents/: .$controller_mapping.drawio.bkp
logs/2026-01-10_21-44-28/: sim_2026-01-10_21-44-28.hoot
modules/: limelight.py
subsystems/: canon_subsystem.py  climb.py  command_swerve_drivetrain.py  hood.py  indexer.py  intake.py  kicker.py  shooter.py  vision.py
tests/: test_auto_tune_hood.py  test_auto_tune_intake.py  test_home_hood.py  test_home_intake.py
tools/: read_tuning.py
(+32 files in other folders)
