[project]
name = "2026-rebuilt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "phoenix6>=26.1.1",
    "robotpy-pathplannerlib>=2026.1.2",
    "robotpy[commands2,pathplannerlib]>=2026.2.1",
]

[tool.robotpy]

# Version of robotpy this project depends on
robotpy_version = "2026.2.1"

# Which core WPILib components should be installed
# -> equivalent to `pip install robotpy[extra1, ...]
components = [
    # "all",
    # "apriltag",
    "commands2",
    # "cscore",
    # "romi",
    # "sim",
    # "xrp",
]

# Other pip packages to install (including vendor packages)
requires = [
    "phoenix6~=26.1",
    # "photonlibpy",
    # "robotpy-ctre",  # Phoenix 5
    # "robotpy-navx",
    "robotpy-pathplannerlib",
    # "robotpy-playingwithfusion",
    "robotpy-rev",
]
